# Personal_Assistant_CN

./: .env.example  .gitignore  Dockerfile  README.md  SKILLS_UI_TEST_REPORT.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: deployment.md
.github/workflows/: deploy-docs.yml
app/: config.py  main.py
app/api/: chat.py  documents.py  feishu.py  memory.py  skills.py  wecom.py
app/channels/: base.py  dispatcher.py  feishu.py  web.py  wecom.py
app/data/: __init__.py  market.py
app/engine/: chat.py  db.py  llm.py  memory.py  memory_backends.py  router.py  scheduler.py  vectorstore.py
app/models/: memory.py
app/skills/: base.py  registry.py
app/skills/browser/: browser_action.py  browser_manager.py
app/skills/chat/: companion.py
app/skills/compute/: datetime_tool.py  python_executor.py
app/skills/daily/: currency.py  memo.py  translate.py  weather.py
app/skills/finance/: portfolio.py  stock_alert.py  stock_chart.py  stock_suspend.py
app/skills/knowledge/: knowledge_base.py
app/skills/search/: web_reader.py  web_search.py
app/static/: companion.html  index.html  router.html  skills.html
cf-em-proxy/: README.md  deno_proxy.ts  package-lock.json  package.json  wrangler.toml
cf-em-proxy/src/: index.js
deploy/: deploy.env.template  env.production.template
docs/: architecture.md  data-and-apis.md  deployment.md  frontend-and-proxy.md  getting-started.md  github-pages.md  index.md
scripts/: deploy_credentials.py  deploy_rebuild.py  deploy_sync.py  merge_env_to_production.py  remote_shell.py
tests/: test_e2e.py  test_memory.py  test_skill_registry.py  test_vectorstore.py
web/: FRONTEND_HANDOVER.md  next.config.ts  package-lock.json  package.json
(+14 files in other folders)
