[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 仅发布 app，避免与 web/、scripts/ 等顶层目录冲突（editable 安装 / CI）
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "personal-assistant-cn"
version = "0.1.0"
description = "面向中国市场的个人 AI 助手平台，可插拔 Skill 架构"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "websockets>=13.0",
    # LLM
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # 缓存
    "redis[hiredis]>=5.0.0",
    # 配置
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # 工具
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    # playwright 在需要浏览器自动化时手动安装: pip install playwright && playwright install chromium
    # 飞书
    "lark-oapi>=1.5.0",
    # 定时任务
    "apscheduler>=3.10.0",
    # 加密
    "pycryptodome>=3.20.0",
    # 金融数据
    "yfinance>=0.2.0",
    "tushare>=1.4.0",
    "akshare>=1.14.0",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
